# Z-TPGrupal

./: .gitignore  CMakeLists.txt  Protocol.MD  Protocol.md  README.md  Z.glade  Z_TPGrupal  cfg.xml  comandos para el servidor.txt  installs.sh  tp.sh
maps/: map.xml  second_map.xml
src/: Armament.h  Building.h  BuildingPanel.cpp  BuildingPanel.h  BuildingsMonitor.cpp  BuildingsMonitor.h  Camera.h  Cell.cpp  Cell.h  ClientThread.cpp  ClientThread.h  GameArea.cpp  GameArea.h  GameBuilder.cpp  GameBuilder.h  GameWindow.cpp  GameWindow.h  GraphicsThread.cpp  GraphicsThread.h  Lock.cpp  Map.cpp  Map.h  MapGenerator.cpp  MapGenerator.h  MapLoader.cpp  MapLoader.h  MapMonitor.cpp  MapMonitor.h  Occupant.cpp  Occupant.h  PlayersMonitor.cpp  PlayersMonitor.h  Terrain.cpp  Terrain.h  Thread.cpp  Thread.h  Unit.h  Z.glade  cell.cpp  cell.h  (+31 more)
src/client/: ActionsEnum.h  Armament.cpp  Armament.h  Building.cpp  Building.h  BuildingPanel.cpp  BuildingPanel.h  BuildingsEnum.h  BuildingsMonitor.cpp  BuildingsMonitor.h  CMakeLists.txt  Camera.cpp  Camera.h  Cell.cpp  ClientThread.cpp  ClientThread.h  Counter.cpp  Counter.h  FlagEnum.h  Game.cpp  Game.h  GameArea.cpp  GameArea.h  GameBuilder.cpp  GameBuilder.h  GameWindow.cpp  GameWindow.h  GraphicsThread.cpp  GraphicsThread.h  Lock.h  Map.cpp  Map.h  MapMonitor.cpp  MapMonitor.h  Nature.cpp  Nature.h  Player.cpp  Player.h  PlayersMonitor.cpp  PlayersMonitor.h  (+13 more)
src/client/commands/: AddBuilding.cpp  AddBuilding.h  AddNature.cpp  AddNature.h  AddUnit.cpp  AddUnit.h  Command.h  FactoryNextUnit.cpp  FactoryNextUnit.h  FactoryStats.cpp  FactoryStats.h  JoinLobby.cpp  JoinLobby.h  LoadMap.cpp  LoadMap.h  LobbyInfo.cpp  LobbyInfo.h  Loser.cpp  Loser.h  MapsInfo.cpp  MapsInfo.h  PlayerNames.cpp  PlayerNames.h  RemoveUnit.cpp  RemoveUnit.h  StartGame.cpp  StartGame.h  Update.cpp  Update.h  UpdateFactory.cpp  UpdateFactory.h  UpdatePosition.cpp  UpdatePosition.h  UpdateTerritory.cpp  UpdateTerritory.h  UpdateUnit.cpp  UpdateUnit.h  Winner.cpp  Winner.h
src/client/enums/: ActionsEnum.h  BuildingsEnum.h  FlagEnum.h  NatureEnum.h  RotationsEnum.h  TeamEnum.h  UnitsEnum.h
src/client/panels/: BuildingPanel.cpp  BuildingPanel.h  UnitPanel.cpp  UnitPanel.h
src/client/windows/: GameWindow.cpp  GameWindow.h  InitialWindow.cpp  InitialWindow.h  LobbyWindow.cpp  LobbyWindow.h  MenuWindow.cpp  MenuWindow.h  ReadyToggle.cpp  ReadyToggle.h  ResultWindow.cpp  ResultWindow.h
src/common/: CMakeLists.txt  Makefile  Thread.h  messenger.cpp  messenger.h  socket.cpp  socketError.cpp  socketError.h  split.cpp  split.h
src/generator/: CMakeLists.txt  MapGenerator.cpp  MapGenerator.h  Random.cpp  Random.h  main.cpp
src/server/: CMakeLists.txt  MapLoader.cpp  MapLoader.h  Occupant.cpp  Occupant.h  Terrain.cpp  Z_Server  bullet.cpp  bullet.h  cell.cpp  cell.h  command.cpp  command.h  commandMonitor.cpp  commandMonitor.h  command_cu.cpp  command_cu.h  command_lobby.cpp  command_lobby.h  command_menu.cpp  command_menu.h  compass.cpp  compass.h  controUnit.cpp  controUnit.h  controlUnit.cpp  controlUnit.h  factory.cpp  factory.h  game.cpp  game.h  lobby.cpp  lobby.h  lock.cpp  main.cpp  map.cpp  map.h  map.xml  menu.cpp  menu.h  (+26 more)
test/: clientReceiverTest.cpp  clientReceiverTest.h  cliente_prueba_para_servidor.py  messenger.cpp  messenger.h  server.cpp  socket.cpp  socket.h  test_client.cpp  tp
